--- a/backend/package.json
+++ b/backend/package.json
@@ -11,7 +11,6 @@
   "dependencies": {
     "ejs": "^3.1.10",
     "express": "^4.21.0",
-    "mongoose": "^8.7.0",
-    "node": "^20.18.0"
+    "mongoose": "^8.7.0"
   }
 }
