--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
-MONGO_URL="mongodb://localhost:27017/Mario"
+MONGO_URL="mongodb+srv://ajaykannan1001200635:ajay@cluster0.vgqca.mongodb.net/Mario?retryWrites=true&w=majority&appName=Cluster0"
 port = 8080
 SECRET_KEY = "this_is_secret_key"
